[gd_scene load_steps=3 format=3 uid="uid://fem36ekx67wo"]

[ext_resource type="Texture2D" uid="uid://vi75tjr72sg4" path="res://resources/icons/Soldier.png" id="1_dcy6g"]
[ext_resource type="Script" uid="uid://cou35aoi4aeqf" path="res://scripts/scenes/UnitChoice.gd" id="1_f3sta"]

[node name="UnitChoice" type="VBoxContainer"]
custom_minimum_size = Vector2(80, 220)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1072.0
offset_bottom = -423.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_f3sta")
unit_type = 1

[node name="UnitTexture" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_dcy6g")
expand_mode = 4
stretch_mode = 4

[node name="Plus" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "+"

[node name="UnitNumber" type="Label" parent="."]
layout_mode = 2
text = "4"
horizontal_alignment = 1

[node name="Minus" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
text = "-"
